# TDXAUTO

./: .gitignore  CLAUDE.md  LICENSE  README.md  aaa.json  aaa.py  add_buy_st.py  add_sell_st.py  ai_data.py  ak_data.py  ak_dt.py  ak_simple.py  button_config.json  check.py  data_update.py  del34.py  emo_111.py  emo_simple.py  etf_jz.json  f_etf.py  filter_board_config.json  filter_config.json  fund.py  fund_etf.py  fund_lof.py  get_his_price.py  get_minline.py  get_price_from_mootdx.py  gui_config.txt  hot_blk.py  hot_cxg.py  hot_lbtt.json  hot_lbtt.py  hot_rank.py  hot_rate.py  hot_zt.py  hot_ztjx.py  link_tdx.py  main.py  news.py  (+30 more)
